--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ dependencies {
     compile 'org.eclipse.jetty:jetty-server:9.3.20.v20170531'
     compile 'org.eclipse.jetty:jetty-webapp:9.3.20.v20170531'
     compile 'org.eclipse.jetty:jetty-continuation:9.3.20.v20170531'
+
+    compile 'org.eclipse.jetty.websocket:websocket-server:9.3.20.v20170531'
 }
 
 applicationName = 'demo'
