Update electron version to 1.7.11

--- a/src/main/electron/package.json
+++ b/src/main/electron/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "main": "main.js",
   "devDependencies": {
-    "electron": "^1.7.9",
-    "electron-package": "^0.1.0"
+    "electron": "^1.7.11"
   },
   "dependencies": {
     "minimal-request-promise": "^1.5.0",
